--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,13 @@ dist
 
 # TernJS port file
 .tern-port
+
+### Django ###
+*.log
+*.pot
+*.pyc
+backend/medflow/__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
