--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,12 @@ asgiref==3.3.1
 Django==3.1.7
 djangorestframework==3.12.2
 djangorestframework-api-key==2.0.0
+flake8==3.9.0
+mccabe==0.6.1
 psycopg2==2.8.6
+pycodestyle==2.7.0
+pyflakes==2.3.0
 pytz==2021.1
+six==1.15.0
 sqlparse==0.4.1
+validate-email==1.3
